// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comments<CommentPreview> with replies renders correctly 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  delayLongPress={600}
  extraButtonProps={
    Object {
      "rippleColor": "transparent",
    }
  }
  onLongPress={[Function]}
  onPress={[Function]}
>
  <View
    style={
      Object {
        "alignItems": "stretch",
        "borderTopColor": "rgb(255, 255, 255)",
        "borderTopWidth": 3,
        "flex": 1,
        "flexDirection": "row",
        "margin": 10,
        "marginBottom": 0,
        "paddingTop": 5,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "width": 60,
        }
      }
    >
      <View>
        <Avatar
          avatarPath={
            Object {
              "testUri": "../../../app/assets/images/empower_two_women_logo.png",
            }
          }
          userId="1235we"
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "marginLeft": 10,
          "marginVertical": 10,
        }
      }
    >
      <Title
        text="Meu pai fez o que ela mandou"
      />
      <Text
        style={
          Object {
            "color": "rgb(51, 51, 51)",
            "fontStyle": "italic",
            "marginBottom": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "rgb(45, 82, 113)",
              "fontWeight": "bold",
            }
          }
        >
          Empodere Duas Mulheres 
        </Text>
        há 20 horas
      </Text>
      <Text
        style={
          Object {
            "flex": 1,
            "flexWrap": "nowrap",
          }
        }
      >
        Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e...
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginRight": 3.3333333333333335,
        }
      }
    >
      <Badge
        left={0}
        number={1}
        staticPosition={true}
      />
    </View>
  </View>
  <ActionSheetComment
    item={
      Object {
        "author": Object {
          "avatarPath": Object {
            "testUri": "../../../app/assets/images/empower_two_women_logo.png",
          },
          "id": "1235we",
          "name": "Empodere Duas Mulheres",
          "posts": Array [],
        },
        "content": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
        "edited": false,
        "id": "21097",
        "isAuthorCurrentUser": false,
        "publishedAt": 2019-01-01T00:00:00.000Z,
        "replies": Array [
          Object {
            "author": Object {
              "avatarPath": Object {
                "testUri": "../../../app/assets/images/empower_two_women_logo.png",
              },
              "id": "1235we",
              "name": "Empodere Duas Mulheres",
              "posts": Array [],
            },
            "comment": Object {
              "author": Object {
                "avatarPath": Object {
                  "testUri": "../../../app/assets/images/empower_two_women_logo.png",
                },
                "id": "1235we",
                "name": "Empodere Duas Mulheres",
                "posts": Array [],
              },
              "content": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
              "edited": false,
              "id": "21097",
              "isAuthorCurrentUser": false,
              "publishedAt": 2019-01-01T00:00:00.000Z,
              "replies": Array [],
              "totalReplies": 0,
            },
            "content": "Nao.",
            "edited": false,
            "id": "21097",
            "isAuthorCurrentUser": false,
            "link": null,
            "publishedAt": 2019-01-01T00:00:00.000Z,
          },
        ],
        "title": "Meu pai fez o que ela mandou",
        "totalReplies": 1,
      }
    }
    postId="213543"
    refProp={[Function]}
  />
</TouchableOpacity>
`;

exports[`Comments<CommentPreview> without replies renders correctly 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  delayLongPress={600}
  extraButtonProps={
    Object {
      "rippleColor": "transparent",
    }
  }
  onLongPress={[Function]}
  onPress={[Function]}
>
  <View
    style={
      Object {
        "alignItems": "stretch",
        "borderTopColor": "rgb(255, 255, 255)",
        "borderTopWidth": 3,
        "flex": 1,
        "flexDirection": "row",
        "margin": 10,
        "marginBottom": 0,
        "paddingTop": 5,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "width": 60,
        }
      }
    >
      <View>
        <Avatar
          avatarPath={
            Object {
              "testUri": "../../../app/assets/images/empower_two_women_logo.png",
            }
          }
          userId="1235we"
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "marginLeft": 10,
          "marginVertical": 10,
        }
      }
    >
      <Title
        text="Meu pai fez o que ela mandou"
      />
      <Text
        style={
          Object {
            "color": "rgb(51, 51, 51)",
            "fontStyle": "italic",
            "marginBottom": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "rgb(45, 82, 113)",
              "fontWeight": "bold",
            }
          }
        >
          Empodere Duas Mulheres 
        </Text>
        há 9 minutos
      </Text>
      <Text
        style={
          Object {
            "flex": 1,
            "flexWrap": "nowrap",
          }
        }
      >
        Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e...
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginRight": 3.3333333333333335,
        }
      }
    >
      <Badge
        left={0}
        number={1}
        staticPosition={true}
      />
    </View>
  </View>
  <ActionSheetComment
    item={
      Object {
        "author": Object {
          "avatarPath": Object {
            "testUri": "../../../app/assets/images/empower_two_women_logo.png",
          },
          "id": "1235we",
          "name": "Empodere Duas Mulheres",
          "posts": Array [],
        },
        "content": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
        "edited": false,
        "id": "21097",
        "isAuthorCurrentUser": false,
        "publishedAt": 2019-01-01T00:00:00.000Z,
        "replies": Array [
          Object {
            "author": Object {
              "avatarPath": Object {
                "testUri": "../../../app/assets/images/empower_two_women_logo.png",
              },
              "id": "1235we",
              "name": "Empodere Duas Mulheres",
              "posts": Array [],
            },
            "comment": Object {
              "author": Object {
                "avatarPath": Object {
                  "testUri": "../../../app/assets/images/empower_two_women_logo.png",
                },
                "id": "1235we",
                "name": "Empodere Duas Mulheres",
                "posts": Array [],
              },
              "content": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
              "edited": false,
              "id": "21097",
              "isAuthorCurrentUser": false,
              "publishedAt": 2019-01-01T00:00:00.000Z,
              "replies": Array [],
              "totalReplies": 0,
            },
            "content": "Nao.",
            "edited": false,
            "id": "21097",
            "isAuthorCurrentUser": false,
            "link": null,
            "publishedAt": 2019-01-01T00:00:00.000Z,
          },
        ],
        "title": "Meu pai fez o que ela mandou",
        "totalReplies": 1,
      }
    }
    postId="927164"
    refProp={[Function]}
  />
</TouchableOpacity>
`;
